chapter3/project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-vol
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: todo-app
          image: vesajo/todo-app@sha256:4785a8981e32263675c47603240065df635f0bd848a2252a734c625b7ad657c9
          volumeMounts:
            - name: image-vol
              mountPath: /app/public/images
